--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,15 @@ Flask==3.0.0
 flask-cors==4.0.0
 anthropic==0.26.1
 python-dotenv==1.0.0
+httpx==0.23.3
+codebleu==0.7.0
+pygments==2.17.2
+astor==0.8.1
+astpretty==3.0.0
+tree-sitter==0.22.3
+tree-sitter-python==0.21.0
+tree-sitter-java==0.21.0
+tree-sitter-javascript==0.21.0
+tree-sitter-c==0.21.0
+tree-sitter-cpp==0.21.0
 
